@@ -3,6 +3,8 @@ NEWS - OpenPrinting CUPS Filters v1.8.3 - 2016-03-23
 
 CHANGES IN V1.8.4
 
+	- braille: Recognize application/vnd.cups-pdf-banner MIME type and
+	  read standard input directly instead of using /dev/stdin.
 	- braille: Drop output of the "type" command when checking the
 	  presence of helper utilities.
 	- braille: Do not send EOF twice to the braille embosser.
